Release Notes

* 6/13/2016
  * removed datatype check from EP

* 6/7/2016
  * changed to sort files for ES since file order is important for positional event number

* 6/6/2016
  * resetting batchID for retry

* 6/2/2016
  * removed scope from tmpin

* 5/31/2016
  * fixed event range generation with multiple inputs

* 5/20/2016
  * added a protection against unique constraint ATLAS_RUCIO.DIDS_GUID_IDX violation
  * added a protection against too long scope
  * setting panda_id and campaign to file metadata

* 5/25/2016
  * imporved getJediTaskDetails
  * added writeInputToFile
  * fixed Watcher for time-outed ES merge not to update ES jobs

* 5/9/2016
  * reduced memory consumtion and removed redundant file lookups in SetupperAtlas

* 5/4/2016
  * changed to copy ES merge trf to job.transformation
  * changed ES jobs to go from merging to failed when associated ES jobs go to failed

* 5/3/2016
  * using merging for ES jobs while ES merge is running

* 5/2/2016
  * changed AdderAtlas to work without srm endpoints with OS endpoint
  * added localEsMergeNC

* 4/28/2016
  * changed getJob to send json if clients accept it

* 4/17/2016
  * fixed killUnusedEvent* to check jobsetID

* 4/13/2016
  * fixed insertTaskParam to update JEDI taskparam table when task is running
  * fixed listDatasetByGUIDs to regard UnknownDatasetException as fatal

* 4/11/2016
  * changed to accept retry(newOpts) when analy tasks are running
  * changed getJob for retried ES merge jobs
  * fixed double counting in getCriteria 

* 4/10/2016
  * changed propageResult for cloned jobs to set jobset_id

* 4/8/2016
  * setting destinationse for log of ES merge

* 4/7/2016
  * changed not to send ES merge to short queue
  * changed not to send log info to ES merge
  * using -details richtype for EI
  * recording jobsetIDs and their history for ES

* 4/6/2016
  * fixed fairshare for WORLD
  * introduced connection pool for EI lookup

* 4/5/2016
  * fixed updateUnmergeDS for running