@@ -1,6 +1,7 @@
 Release Notes
 
 * 6/13/2016
+  * added keepUnmerged to killJob
   * removed datatype check from EP
 
 * 6/7/2016
